--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,14 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
+    <string-array name="fonts_entries">
         <item>Roboto</item>
         <item>Sans-Serif</item>
+        <item>Monospace</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>roboto</item>
-        <item>sans-serif</item>
+    <string-array name="fonts_values">
+        <item>Roboto</item>
+        <item>Sans-Serif</item>
+        <item>Monospace</item>
     </string-array>
 </resources>
