--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -9,7 +9,7 @@
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/delete"
-        android:title="Save"
+        android:title="Delete"
         android:icon="@drawable/ic_delete"
         app:showAsAction="ifRoom"/>
 
