--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -26,6 +26,7 @@
         android:layout_marginEnd="@dimen/_20sdp"
         android:hint="Title"
         android:textStyle="bold"
+        android:textSize="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_10sdp" />
 
     <EditText
