--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -7,6 +7,8 @@
     android:layout_marginStart="@dimen/_25sdp"
     android:layout_marginEnd="@dimen/_25sdp"
     android:layout_marginTop="@dimen/_15sdp"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     card_view:cardCornerRadius="10dp">
 
